--- a/publication/2/index.html
+++ b/publication/2/index.html
@@ -950,7 +950,7 @@ Supplementary notes can be added here, including [code and math](https://sourcet
       
     
     <li>
-      <a href="/#contact" >
+      <a href="https://scholar.google.com/citations?user=ffRKNDoAAAAJ&amp;hl=en&amp;oi=ao" target="_blank" rel="noopener">
         <i class="fab fa-google"></i>
       </a>
     </li>
