--- a/publication/index.html
+++ b/publication/index.html
@@ -919,7 +919,7 @@
     
 
   
-  <span ><a href="/author/yan-pei-cao/">Yan-Pei Cao</a></span>, <span ><a href="/author/zheng-ning-liu/">Zheng-Ning Liu</a></span>, <span ><a href="/author/zhengfei-kuang/">Zhengfei Kuang</a></span>, <span ><a href="/author/leif-kobbelt/">Leif Kobbelt</a></span>, <span ><a href="/author/shi-min-hu/">Shi-min Hu</a></span>
+  <span ><a href="/author/yan-pei-cao/">Yan-Pei Cao</a></span>, <span ><a href="/author/zheng-ning-liu/">Zheng-Ning Liu</a></span>, <span ><a href="/author/badmin/b/">&lt;b&gt;admin&lt;/b&gt;</a></span>, <span ><a href="/author/leif-kobbelt/">Leif Kobbelt</a></span>, <span ><a href="/author/shi-min-hu/">Shi-min Hu</a></span>
   </span>
   (2018).
   <a href="/publication/1/">Learning to Reconstruct High-quality 3D Shapes with Cascaded Fully Convolutional Networks</a>.
