removed a small bug

--- a/index.html
+++ b/index.html
@@ -1344,7 +1344,7 @@
         
 
   
-  <span ><a href="/author/yan-pei-cao/">Yan-Pei Cao</a></span>, <span ><a href="/author/zheng-ning-liu/">Zheng-Ning Liu</a></span>, <span ><a href="/author/badmin/b/">&lt;b&gt;admin&lt;/b&gt;</a></span>, <span ><a href="/author/leif-kobbelt/">Leif Kobbelt</a></span>, <span ><a href="/author/shi-min-hu/">Shi-min Hu</a></span>
+  <span ><a href="/author/yan-pei-cao/">Yan-Pei Cao</a></span>, <span ><a href="/author/zheng-ning-liu/">Zheng-Ning Liu</a></span>, <span ><a href="/author/zhengfei-kuang/">Zhengfei Kuang</a></span>, <span ><a href="/author/leif-kobbelt/">Leif Kobbelt</a></span>, <span ><a href="/author/shi-min-hu/">Shi-min Hu</a></span>
       </div>
       
     </div>
