--- a/publication/index.html
+++ b/publication/index.html
@@ -651,7 +651,7 @@
     
 
   
-  <span ><a href="/author/zhengfei-kuang/">Zhengfei Kuang</a></span>, <span ><a href="/author/kyle-olszewski/">Kyle Olszewski</a></span>, <span ><a href="/author/menglei-chai/">Menglei Chai</a></span>, <span ><a href="/author/zeng-huang/">Zeng Huang</a></span>, <span ><a href="/author/sergey-tulyakov/">Sergey Tulyakov</a></span>
+  <span ><a href="/author/zhengfei-kuang/">Zhengfei Kuang</a></span>, <span ><a href="/author/kyle-olszewski/">Kyle Olszewski</a></span>, <span ><a href="/author/menglei-chai/">Menglei Chai</a></span>, <span ><a href="/author/zeng-huang/">Zeng Huang</a></span>, <span ><a href="/author/panos-achlioptas/">Panos Achlioptas</a></span>, <span ><a href="/author/sergey-tulyakov/">Sergey Tulyakov</a></span>
   </span>
   (2021).
   <a href="/publication/5/">NeROIC: Neural Object Capture and Rendering from Online Image Collections</a>.
