added new project page

--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
     
     <a href="/publication/5/"  class="summary-link">
       <div class="article-style">
-        Comming Soon
+        Preprint on Arxiv, 2022
       </div>
     </a>
     
@@ -957,6 +957,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://formyfamily.github.io/NeROIC/" target="_blank" rel="noopener">
+  Project
+</a>
 
 
 
