--- a/publication/5/index.html
+++ b/publication/5/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="Comming Soon">
+  <meta name="description" content="Preprint on Arxiv, 2022">
 
   
   <link rel="alternate" hreflang="en-us" href="https://zhengfeikuang.com/publication/5/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Zhengfei Kuang">
   <meta property="og:url" content="https://zhengfeikuang.com/publication/5/">
   <meta property="og:title" content="NeROIC: Neural Object Capture and Rendering from Online Image Collections | Zhengfei Kuang">
-  <meta property="og:description" content="Comming Soon"><meta property="og:image" content="https://zhengfeikuang.com/publication/5/featured.png">
+  <meta property="og:description" content="Preprint on Arxiv, 2022"><meta property="og:image" content="https://zhengfeikuang.com/publication/5/featured.png">
   <meta property="twitter:image" content="https://zhengfeikuang.com/publication/5/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -333,7 +333,7 @@
       "url": "https://zhengfeikuang.com/images/icon_hu7bfa335879e23b5e181e1083958f9d87_3410_192x192_fill_lanczos_center_2.png"
     }
   },
-  "description": "Comming Soon"
+  "description": "Preprint on Arxiv, 2022"
 }
 </script>
 
@@ -668,6 +668,43 @@
 
 
 
+
+<div class="btn-links mb-3">
+  
+  
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+<a class="btn btn-outline-primary my-1 mr-1" href="https://formyfamily.github.io/NeROIC/" target="_blank" rel="noopener">
+  Project
+</a>
+
+
+
+
+
+
+
+
+
+
+
+</div>
 
 
 </div>
