--- a/publication/index.html
+++ b/publication/index.html
@@ -676,6 +676,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://formyfamily.github.io/NeROIC/" target="_blank" rel="noopener">
+  Project
+</a>
+
 
 
 
