--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -573,7 +573,7 @@
       <h2><a href="/publication/5/" >NeROIC: Neural Object Capture and Rendering from Online Image Collections</a></h2>
       <div class="article-style">
         
-          Comming Soon
+          Preprint on Arxiv, 2022
         
       </div>
     </div>
