change newest publication

--- a/publication/index.html
+++ b/publication/index.html
@@ -654,7 +654,7 @@
   <span ><a href="/author/zhengfei-kuang/">Zhengfei Kuang</a></span>, <span ><a href="/author/kyle-olszewski/">Kyle Olszewski</a></span>, <span ><a href="/author/menglei-chai/">Menglei Chai</a></span>, <span ><a href="/author/zeng-huang/">Zeng Huang</a></span>, <span ><a href="/author/panos-achlioptas/">Panos Achlioptas</a></span>, <span ><a href="/author/sergey-tulyakov/">Sergey Tulyakov</a></span>
   </span>
   (2021).
-  <a href="/publication/5/">NeROIC: Neural Object Capture and Rendering from Online Image Collections</a>.
+  <a href="/publication/5/">Neural Object Rendering from Online Images</a>.
   Comming Soon.
   
   <p>
@@ -675,10 +675,6 @@
 
 
 
-
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://formyfamily.github.io/NeROIC/" target="_blank" rel="noopener">
-  Project
-</a>
 
 
 
