--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -573,7 +573,7 @@
       <h2><a href="/publication/5/" >NeROIC: Neural Object Capture and Rendering from Online Image Collections</a></h2>
       <div class="article-style">
         
-          ACM SIGGRAPH 2022 (Code will be available before late July)
+          ACM SIGGRAPH 2022
         
       </div>
     </div>
