--- a/publication/2/index.html
+++ b/publication/2/index.html
@@ -931,7 +931,7 @@ Supplementary notes can be added here, including [code and math](https://sourcet
     
     
     <li>
-      <a href="mailto:zhengfei@stanford.org" >
+      <a href="mailto:zhengfei@stanford.edu" >
         <i class="fas fa-envelope"></i>
       </a>
     </li>
