--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
     
     <a href="/publication/4/"  class="summary-link">
       <div class="article-style">
-        ICPR 2022
+        ICPR 2022 (Oral)
       </div>
     </a>
     
