--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -573,7 +573,7 @@
       <h2><a href="/publication/4/" >DenseGAP: Graph-Structured Dense Correspondence Learning with Anchor Points</a></h2>
       <div class="article-style">
         
-          ICPR 2022
+          ICPR 2022 (Oral)
         
       </div>
     </div>
