--- a/publication/4/index.html
+++ b/publication/4/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="ICPR 2022">
+  <meta name="description" content="ICPR 2022 (Oral)">
 
   
   <link rel="alternate" hreflang="en-us" href="https://zhengfeikuang.com/publication/4/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Zhengfei Kuang">
   <meta property="og:url" content="https://zhengfeikuang.com/publication/4/">
   <meta property="og:title" content="DenseGAP: Graph-Structured Dense Correspondence Learning with Anchor Points | Zhengfei Kuang">
-  <meta property="og:description" content="ICPR 2022"><meta property="og:image" content="https://zhengfeikuang.com/publication/4/featured.png">
+  <meta property="og:description" content="ICPR 2022 (Oral)"><meta property="og:image" content="https://zhengfeikuang.com/publication/4/featured.png">
   <meta property="twitter:image" content="https://zhengfeikuang.com/publication/4/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -333,7 +333,7 @@
       "url": "https://zhengfeikuang.com/images/icon_hu7bfa335879e23b5e181e1083958f9d87_3410_192x192_fill_lanczos_center_2.png"
     }
   },
-  "description": "ICPR 2022"
+  "description": "ICPR 2022 (Oral)"
 }
 </script>
 
