--- a/publication/5/index.html
+++ b/publication/5/index.html
@@ -690,7 +690,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://formyfamily.github.io/NeROIC/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://zfkuang.github.io/NeROIC/" target="_blank" rel="noopener">
   Project
 </a>
 
@@ -957,7 +957,7 @@ Supplementary notes can be added here, including [code and math](https://sourcet
       
     
     <li>
-      <a href="https://github.com/formyfamily" target="_blank" rel="noopener">
+      <a href="https://github.com/zfkuang" target="_blank" rel="noopener">
         <i class="fab fa-github"></i>
       </a>
     </li>
