--- a/publication/6/index.html
+++ b/publication/6/index.html
@@ -957,7 +957,7 @@ Supplementary notes can be added here, including [code and math](https://sourcet
       
     
     <li>
-      <a href="https://github.com/formyfamily" target="_blank" rel="noopener">
+      <a href="https://github.com/zfkuang" target="_blank" rel="noopener">
         <i class="fab fa-github"></i>
       </a>
     </li>
