--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
           
         
         <li>
-          <a href="https://github.com/formyfamily" target="_blank" rel="noopener">
+          <a href="https://github.com/zfkuang" target="_blank" rel="noopener">
             <i class="fab fa-github big-icon"></i>
           </a>
         </li>
@@ -1063,7 +1063,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://formyfamily.github.io/NeROIC/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://zfkuang.github.io/NeROIC/" target="_blank" rel="noopener">
   Project
 </a>
 
@@ -1164,7 +1164,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://formyfamily.github.io/DenseGAP/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://zfkuang.github.io/DenseGAP/" target="_blank" rel="noopener">
   Project
 </a>
 
