--- a/publication/index.html
+++ b/publication/index.html
@@ -748,7 +748,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://formyfamily.github.io/NeROIC/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://zfkuang.github.io/NeROIC/" target="_blank" rel="noopener">
   Project
 </a>
 
@@ -813,7 +813,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://formyfamily.github.io/DenseGAP/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://zfkuang.github.io/DenseGAP/" target="_blank" rel="noopener">
   Project
 </a>
 
