--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
     
     <a href="/publication/6/"  class="summary-link">
       <div class="article-style">
-        Arxiv
+        CVPR 2023
       </div>
     </a>
     
