--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -573,7 +573,7 @@
       <h2><a href="/publication/6/" >PaletteNeRF: Palette-based Appearance Editing of Neural Radiance Fields</a></h2>
       <div class="article-style">
         
-          Arxiv
+          CVPR 2023
         
       </div>
     </div>
